# c-engine

./: .gitignore  CMakeLists.txt  CodingConventions  Notes.txt  README.md  build2file  imgui.ini  makefile  manifest  repositories.manifest
aurora-engine/: build2file  imgui.ini
aurora-engine/Assertion/: Assertion.h
aurora-engine/BaseGameObjects/: Camera.cpp
aurora-engine/Containers/: Array.h  Map.h
aurora-engine/DataStructures/: Quaternion.cpp  Vector2.h  Vector3.cpp
aurora-engine/DataStructures/Events/: Event.h
aurora-engine/Physics/: BoundingBox.cpp  Collider.h  Oscilator.h
aurora-engine/Pointers/: Pointers.h
aurora-engine/Render/: Material.h  Render.cpp
aurora-engine/Render/Window/: WindowGLFW.h
aurora-engine/aurora-engine/: .gitignore  aurora-engine.cpp  buildfile
aurora-engine/aurora-engine/Assertion/: Assertion.h
aurora-engine/aurora-engine/AssetManager/: AssetManager.h
aurora-engine/aurora-engine/BaseComponents/: Camera.cpp  Camera.h  ModelRenderer.cpp  ModelRenderer.h  Transform.cpp  Transform.h
aurora-engine/aurora-engine/BaseGameObjects/: Camera.cpp  Camera.h
aurora-engine/aurora-engine/Containers/: Array.h
aurora-engine/aurora-engine/DataStructures/: Array.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector3.cpp  Vector3.h  Vertex.cpp  Vertex.h
aurora-engine/aurora-engine/DataStructures/Events/: Event.h  Function.h
aurora-engine/aurora-engine/Log/: Log.cpp  Log.h
aurora-engine/aurora-engine/Log/Internals/: Internals.h
aurora-engine/aurora-engine/Objects/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
aurora-engine/aurora-engine/Physics/: BoundingBox.h  BoxCollider.cpp  BoxCollider.h  Oscilator.cpp  Oscilator.h
aurora-engine/aurora-engine/Pointers/: Pointers.h
aurora-engine/aurora-engine/Reading/: ObjReader.cpp  ObjReader.h
aurora-engine/aurora-engine/Render/: Render.cpp  Render.h
aurora-engine/aurora-engine/Render/Window/: Window.h  WindowGLFW.cpp
build2/: bootstrap.build2
cmake/: FindFREEGLUT.cmake  FindGLFW3.cmake
lib/: CMakeLists.txt
lib/base_components/: Camera.cpp  Camera.h  ModelRenderer.cpp  ModelRenderer.h  Transform.cpp  Transform.h
lib/data_structures/: Color.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vertex.cpp  Vertex.h
lib/object/: Component.cpp  Component.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
lib/physics/: BoundingBox.cpp  BoundingBox.h  BoxCollider.cpp  BoxCollider.h  Oscilator.cpp  Oscilator.h
lib/pointers/: pointers.h
lib/reading/: BmpLoader.h  ObjReader.cpp  ObjReader.h
lib/render/: Render.cpp  Render.h
shaders/: fragment.glsl  fragment2.glsl  vertex.glsl
src/: main.cpp
